# ChannelComponents

./: CMakeLists.txt
data/: channels.json
qml/: main.qml
src/: ChannelManager.cpp  ChannelManager.h  Parameter.cpp  Parameter.h  ParameterModel.cpp  ParameterModel.h  main.cpp
